Fix left click on item in panel being ignored

Last patch has a reggression due to QtQuick issue (only on Xcb):
QEvent::Leave is triggered after QEvent::MouseButtonPress Qt::LeftButton

BUG: 354651
REVIEW: 126331